--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=ABeeZee);
 
+body {
+    overflow:hidden;
+}
+
 #kitty-an-anim > ol {
     list-style: none;
     margin: 0;
